[project]
name = "weather-dash-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["dash>=2.18.2", "plotly>=6.0.0", "pandas>=2.2.3", "databricks-sdk>=0.44.1", "databricks-sql-connector>=4.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
